# multitenant-saas-starter-API

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 1f28225ead47_add_users_table.py  37f3d0a7fc9a_add_workspaces_and_workspace_members_.py
app/: main.py
app/core/: auth.py  config.py  exceptions.py  logging.py  permissions.py  redis.py
app/models/: subscription.py  user.py  workspace.py
app/repositories/: user.py  workspace.py
app/routers/: auth.py  billing.py  workspace.py
app/schemas/: subscription.py  user.py
app/services/: auth.py  subscription.py  workspace.py
app/workers/: celery_app.py
app/workers/tasks/: email.py  report.py
docs/: architecture.md
docs/superpowers/specs/: 2026-04-30-scaffold-design.md
tests/: conftest.py
tests/unit/: test_auth_dependency.py  test_auth_service.py  test_permissions.py  test_rate_limit.py  test_repositories.py  test_schemas.py  test_subscription_service.py  test_workers.py  test_workspace_service.py
